finished featured  section

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 				<div class="banner">
 					<div class="banner-content">
 						<h1>PLAY LIKE THE</h1>
-						<h1 class="banner-title">G.O.A.T.</h1>
+						<h1 class="gradient banner-title">G.O.A.T.</h1>
 						<div class="banner-info">
 							<img src="icons/play.png" alt="play" />
 							<p>1-click instant play</p>
@@ -51,6 +51,55 @@
 						</div>
 					</div>
 					<img class="banner-image" src="images/banner.png" alt="banner-image" />
+				</div>
+			</section>
+			<section class="game-showcase">
+				<div class="section-info">
+					<h1>Online Games <span class="gradient">Funny Video</span></h1>
+					<p>A collection of hilarious video games to brighten your day</p>
+				</div>
+				<div class="games">
+					<div class="game">
+						<div class="img-div">
+							<img src="images/featured1.png" alt="featured1" />
+							<div class="overlay">
+								<img src="icons/play-button 1.png" alt="play-button" />
+								<p>Watch Now</p>
+							</div>
+						</div>
+						<p>No Download. No Installs. Play games Instantly on Gamer.</p>
+					</div>
+					<div class="game">
+						<div class="img-div">
+							<img src="images/featured2.png" alt="featured1" />
+							<div class="overlay">
+								<img src="icons/play-button 1.png" alt="play-button" />
+								<p>Watch Now</p>
+							</div>
+						</div>
+						<p>Did you score? #unblockedgames #school</p>
+					</div>
+					<div class="game">
+						<div class="img-div">
+							<img src="images/featured3.png" alt="featured1" />
+							<div class="overlay">
+								<img src="icons/play-button 1.png" alt="play-button" />
+								<p>Watch Now</p>
+							</div>
+						</div>
+
+						<p>Breaking game records like OG</p>
+					</div>
+					<div class="game">
+						<div class="img-div">
+							<img src="images/featured4.png" alt="featured1" />
+							<div class="overlay">
+								<img src="icons/play-button 1.png" alt="play-button" />
+								<p>Watch Now</p>
+							</div>
+						</div>
+						<p>Busted gaming on school laptop, but you are still lit.</p>
+					</div>
 				</div>
 			</section>
 		</main>
