finished overlap, careers and small-game section

--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
 							<p>1000s of supported online games.</p>
 						</div>
 						<div class="banner-buttons">
-							<button>SIGN IN</button>
-							<button>GO ROUGUE</button>
+							<button class="button">SIGN IN</button>
+							<button class="button">GO ROUGUE</button>
 						</div>
 					</div>
 					<img class="banner-image" src="images/banner.png" alt="banner-image" />
@@ -99,6 +99,90 @@
 							</div>
 						</div>
 						<p>Busted gaming on school laptop, but you are still lit.</p>
+					</div>
+				</div>
+			</section>
+			<section class="play-instantly">
+				<div class="section-info">
+					<h1 style="color: #f948b2">Play Instantly,</h1>
+					<h1>No Downloads</h1>
+					<h1>No Installs.</h1>
+					<p>Play games instantly on Gamer. No downloads, no installs, no hassle. Just connect to the internet and you are good to go.</p>
+				</div>
+				<div class="play-instantly-images">
+					<img class="small-img" src="images/overlap2.png" alt="play-instanstly2" />
+					<img class="big-img" src="images/overlap1.png" alt="play-instanstly1" />
+				</div>
+			</section>
+			<section class="careers">
+				<div class="section-info">
+					<div class="section-title">
+						<h1>Careers</h1>
+						<p>
+							Gamer is driven to create the best and most fun games for our millions of players all around the world, and we,re always
+							on the lookout for more top talent to join our growing team. If you,d like to help us make great games and be a part of
+							Gamers bright future, we,d love to hear from you.
+						</p>
+					</div>
+					<div class="list">
+						<div class="left">
+							<p>Multimedia Artist +</p>
+							<p>Data Engineer +</p>
+							<p>Adroid Engineer +</p>
+							<p>Server Developer +</p>
+							<p>Group Financial Accountant +</p>
+							<p>Senior User Acuisition Specialist +</p>
+						</div>
+						<div class="right">
+							<p>Lisbon, Portugal</p>
+							<p>Lisbon, Portugal</p>
+							<p>Zoetermeer, Netherlands</p>
+							<p>Lisbon, Portugal</p>
+							<p>London, United Kingdom</p>
+							<p>Lisbon, Portugal</p>
+						</div>
+					</div>
+					<button class="button">SEE ALL POSITIONS</button>
+				</div>
+				<img src="images/optional2.png" alt="kids playing" />
+			</section>
+			<section class="small-games">
+				<div class="games-container">
+					<div class="game">
+						<img src="images/Rectangle 11.png" alt="" />
+						<p>Arcade Game</p>
+					</div>
+					<div class="game">
+						<img src="images/Rectangle 12.png" alt="" />
+						<p>Adventure Game</p>
+					</div>
+					<div class="game">
+						<img src="images/Rectangle 13.png" alt="" />
+						<p>Arcade Game</p>
+					</div>
+					<div class="game">
+						<img src="images/Rectangle 14.png" alt="" />
+						<p>Educational Game</p>
+					</div>
+					<div class="game">
+						<img src="images/Rectangle 15.png" alt="" />
+						<p>Word Game</p>
+					</div>
+					<div class="game">
+						<img src="images/Rectangle 16.png" alt="" />
+						<p>Role Playing Game</p>
+					</div>
+					<div class="game">
+						<img src="images/Rectangle 17.png" alt="" />
+						<p>Music \& Audio Game</p>
+					</div>
+					<div class="game">
+						<img src="images/Rectangle 18.png" alt="" />
+						<p>Puzzle Game</p>
+					</div>
+					<div class="game">
+						<img src="images/Rectangle 19.png" alt="" />
+						<p>Stategy game</p>
 					</div>
 				</div>
 			</section>
