--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>GameHub</title>
-		<link rel="icon" type="image/png" href="images/logo.png" />
+		<link rel="icon" type="image/png" href="images/icon.png" />
 		<link rel="stylesheet" href="styles.css" />
 	</head>
 	<body>
@@ -186,6 +186,35 @@
 					</div>
 				</div>
 			</section>
+			<footer>
+				<div class="logo">
+					<img src="images/logo.png" alt="logo" />
+					<h1><span>Game</span>Hub</h1>
+				</div>
+				<div class="footer-links">
+					<a href="#">Our Story</a>
+					<a href="#">Games</a>
+					<a href="">Web Games</a>
+					<a href="">Careers</a>
+					<a href="">Support</a>
+					<a href="">My Accountant</a>
+				</div>
+				<div class="logos">
+					<img src="icons/twitter 1.png" alt="" />
+					<img src="icons/facebook.png" alt="" />
+					<img src="icons/youtube-footer.png" alt="" />
+					<img src="icons/in.png" alt="" />
+					<img src="icons/instagram.png" alt="" />
+					<img src="icons/apple.png" alt="" />
+				</div>
+				<div class="footer-info footer-links">
+					<a href="">Terms and conditions</a>
+					<a href="">Privacy Policy</a>
+					<a href="">Cookie Policy</a>
+					<a href="">Privacy Settings</a>
+					<p>Play Games @ Gamer @ 2000-2023 Gamer Bangladesh</p>
+				</div>
+			</footer>
 		</main>
 	</body>
 </html>
