--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
 					<img src="icons/instagram.png" alt="" />
 					<img src="icons/apple.png" alt="" />
 				</div>
-				<div class="footer-info footer-links">
+				<div class="footer-info">
 					<a href="">Terms and conditions</a>
 					<a href="">Privacy Policy</a>
 					<a href="">Cookie Policy</a>
